# quant

0自主开发量化分析平台_C#_py/: ResAsseseNoFig.py  csMarketTiming.py  path2.txt  testtt.py  传入文件样例.csv  安装教程.txt
10因子有效性分析_py/: SA19204118_谢慧琴.ipynb  homework.docx
11毕业论文_基于缠论和SVM-XGBoost的股指拐点预测及量化策略研究_py/: CNN.py  DATA.py  FEATURE.py  INFLECTION.py  JUDGE.py  MODELS.py  PROCESS.py  TRADE.py  VIS.py  main.py  机器学习1_sz50_二分类_-1拐点_20220126.ipynb  机器学习1_sz50_二分类_1拐点_20220126.ipynb
1股指期货CTA策略_py（部分）/: DataRelated.py  HighchartConfig.py  ResAssese.py  StatAnalysis.py  backtest_class.py  interval_theory.py  three_point_class_v0827.py  三买回测模板.ipynb  严苛三买回测.py  分类评估模板.ipynb
2用C++处理level2原始数据/: CMakeLists.txt
2用C++处理level2原始数据/include/: compress.h  snapshot.h
2用C++处理level2原始数据/src/: compress.cpp  kline.cpp  klineBFMain.cpp  listFiles.cpp  main.cpp  oldMain.cpp
3自己的量化研究框架_py_c++/: backtest.py  basic_crawler.py  daily_crawler.py  daily_fixing.py  dataDict.txt  database.py  finance_report_crawler.py  log.py  pe_computing.py  readme.txt  sheduled_crawl_task.py  stock_pool_strategy.py  stock_util.py  tusharePro.py
4基于CNN和ARIMA的大雾演化分析_py/: 2020年E题--能见度估计与预测.doc  第一问 线性回归 .ipynb  第四问 ARIMA.ipynb
4数学建模_py/第二问 卷积神经网络/: Run.py  (+1 more)
5信用违约模型xgboost_py/: 最终模型.ipynb
5招商银行信用卡信用违约模型 _xgboost_py/: 数据说明.xlsx  题目.doc
6信用违约模型逻辑回归_R/: result.csv  信用违约模型 逻辑回归.R  数据说明.xlsx
7多因子选股_优矿/: 中科大比赛出题规则.txt  中科大量化比赛策略_基于优矿  中科大量化比赛策略_基于优矿.py
8关联分析_py/: long_outputs.csv  short_outputs.csv  ~$一级行业指数长短期波动性 APRIORI 算法实证分析.docx  关联分析.ipynb  申万一级行业指数涨跌180101-200327d.csv
9推荐算法_py/: 基于用户的协同过滤.ipynb  推荐结果.csv
(+36 files in other folders)
